--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,11 +16,30 @@
         tools:layout_editor_absoluteX="128dp"
         tools:layout_editor_absoluteY="45dp">
 
+        <TextView
+            android:id="@+id/tituloAndroidStudio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Android Studio y Fe Presenta"
+            android:textStyle="bold|italic"
+            android:textSize="28sp"
+            android:textColor="#03A9F4"/>
+
         <ImageView
             android:id="@+id/imgLogo"
-            android:layout_width="110dp"
+            android:layout_width="188dp"
             android:layout_height="203dp"
-            android:background="@drawable/walkapawlogo" />
+            android:background="@drawable/ic_android_black"
+            android:layout_marginBottom="21dp"/>
+
+        <TextView
+            android:id="@+id/tvUserName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Taller 3"
+            android:textStyle="bold|italic"
+            android:textSize="32sp"
+            android:textColor="@android:color/black"/>
 
         <EditText
             android:id="@+id/etEMAIL"
@@ -36,7 +55,7 @@
 
         <Button
             android:id="@+id/buttonIngresar"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Ingresar"
             android:backgroundTint="#FF5722"
@@ -45,7 +64,7 @@
 
         <Button
             android:id="@+id/buttonCrearCuenta"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Crear cuenta"
             android:backgroundTint="#FF8A63"
